// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Adds and removes in-progress while submitting 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <fieldset
    disabled={true}
  >
    <input
      autoComplete="off"
      defaultValue="bar"
      id="foo"
      name="foo"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
    />
    <button
      className="in-progress "
      disabled={true}
      type="button"
    >
      Save
    </button>
  </fieldset>
</form>
`;

exports[`Form Adds and removes in-progress while submitting 2`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  <fieldset
    disabled={false}
  >
    <input
      autoComplete="off"
      defaultValue="bar"
      id="foo"
      name="foo"
      onChange={[Function]}
      onKeyDown={[Function]}
      type="text"
    />
    <button
      className=""
      disabled={false}
      type="button"
    >
      Save
    </button>
  </fieldset>
</form>
`;
